AI Based Doctor Appointment and Slot Booking System/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Program Files Coding IDEs\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\Program Files Coding IDEs\BlueJ\lib\bluejcore.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-4.12.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-jupiter-5.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-jupiter-api-5.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-jupiter-params-5.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-commons-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-console-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-engine-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-launcher-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-reporting-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-runner-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-platform-testkit-1.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-quickcheck-core-0.9.jar;D:\Program Files Coding IDEs\BlueJ\lib\junit-vintage-engine-5.5.2.jar;D:\Program Files Coding IDEs\BlueJ\lib\hamcrest-core-1.3.jar;D:\Program Files Coding IDEs\BlueJ\lib\hamcrest-library-1.3.jar;D:\Program Files Coding IDEs\BlueJ\lib\lang-stride.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.base.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.media.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\Program Files Coding IDEs\BlueJ\lib\javafx\lib\javafx.web.jar;D:\Program Files Coding IDEs\JAVA FULL VERSIONS\JAVA PROG\HealthTech
-d
D:\Program Files Coding IDEs\JAVA FULL VERSIONS\JAVA PROG\HealthTech\doc
-encoding
UTF-8
-charset
UTF-8
D:\Program Files Coding IDEs\JAVA FULL VERSIONS\JAVA PROG\HealthTech\HealthTech.java
<---- end of javadoc command ---->
Loading source file D:\Program Files Coding IDEs\JAVA FULL VERSIONS\JAVA PROG\HealthTech\HealthTech.java...
D:\Program Files Coding IDEs\JAVA FULL VERSIONS\JAVA PROG\HealthTech\HealthTech.java:73: error: reached end of file while parsing
    }
     ^
1 error
